fileyamlstag/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules: 
  - host: festagtodo.andisyukur.xyz
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-net
            port:
              number: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules: 
  - host: bestagtodo.andisyukur.xyz
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-net
            port:
              number: 80
